--- a/helm-wrapper/templates/service.yaml
+++ b/helm-wrapper/templates/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "helm-wrapper.fullname" . }}
   labels:
     {{- include "helm-wrapper.labels" . | nindent 4 }}
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: {{ .Values.ingress.controllerName }}.{{ .Values.ingress.domainRoot }}
 spec:
   type: {{ .Values.service.type }}
   ports:
