--- a/helm-wrapper/values.yaml
+++ b/helm-wrapper/values.yaml
@@ -1,14 +1,9 @@
-# Default values for helm-wrapper.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
 
 image:
-  repository: helm-wrapper
+  repository: gcr.io/development-376303/helm-api
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "0.0.3-dev"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -41,20 +36,14 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  controllerName: "controller"
+  domainRoot: "labs.terracoders.dev"
+  tlsSecretName: tc-labs-wildcard
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"   
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
